--- a/resume2.tex
+++ b/resume2.tex
@@ -56,7 +56,7 @@
 			\begin{itemize}
 				\item C/EMBEDDED C		(proficient)
 				\item C++				(proficient)
-				\item MATLAB			(intermediate)
+				\item MATLAB			(intermediate , image processing and computer vision)
 				\item JAVA				(intermediate)
 				\item MySQL				(intermediate)
 				\item XML				(intermediate)
