--- a/resume2.tex
+++ b/resume2.tex
@@ -36,8 +36,8 @@
 	  \ * Aggregate percentage till 5th semester	
 	\section*{\underline{\textbf{Projects}}}
 		\begin{enumerate}
-			\item Innovation project: Fan without Electricity
-			\item Innovation project: Problem based learning in simulation environment 
+			\item Innovation project: Fan Without Electricity
+			\item Innovation project: Problem based learning in Simulation environment 
 		\end{enumerate}
 	
 %	\section*{\underline{\textbf{Training and Internship}}}
