--- a/resume2.tex
+++ b/resume2.tex
@@ -47,7 +47,7 @@
 		
 	\section*{\underline{\textbf{Research Publication}}}
 		\begin{enumerate}
-			\item Greener mobile phones (Co-author)
+			\item Greener Mobile Phones (Co-author)
 		\end{enumerate}
 	
 	\section*{\underline{\textbf{Technical skills}}}
