career objective added

--- a/resume2.tex
+++ b/resume2.tex
@@ -17,7 +17,7 @@
 		
 	\section*{\underline{\textbf{Career Objective}}}
 
-	Position as a robotic engineer and increase my experience and knowledge in field of computers \& electronics
+	Position as a Robotic engineer and increase my experience and knowledge in field of computers \& electronics
 	
 	\section*{\underline{\textbf{Education}}}
 		\begin{tabular}{|l||c||c||r|}
