--- a/resume2.tex
+++ b/resume2.tex
@@ -22,7 +22,7 @@
 	\section*{\underline{\textbf{Education}}}
 		\begin{tabular}{|l||c||c||r|}
 			\hline
-			Standard/Course & School(board)/University & percentage \\
+			Standard/Course & School(board)/University & Percentage \\
 			\hline
 			10th & Guru Harkrishan Public School(CBSE) & 8.4(CGPA)\\
 			\hline
