soft skills added

--- a/resume2.tex
+++ b/resume2.tex
@@ -75,9 +75,9 @@
 		
 	\section*{\underline{\textbf{Soft skills}}}
 		\begin{enumerate}
-			\item Creative
+			\item Creative \& practical thinking 
 			\item Quickly adaptive to new environment
-			\item leadership quality
+			\item Experienced leadership skills in various department events. 
 			
 		\end{enumerate}
 		
