--- a/resume2.tex
+++ b/resume2.tex
@@ -100,12 +100,12 @@
 			\item 3rd position in delhi region in college level National Anveshika Experimental Skill Test 2015
 		\end{enumerate}	
 		
-%	\section*{\underline{\textbf{Hobbies}}}
-%		\begin{enumerate}
-%			\item Reading novels(sci-fi,thriller,fantasy,mysteries)
-%			\item Reading DC Comics
-%			\item Gaming(MMO,FPS,strategy,RP,action) 
-%		\end{enumerate}
+	\section*{\underline{\textbf{Hobbies}}}
+		\begin{enumerate}
+			\item Reading novels(sci-fi,thriller,fantasy,mysteries)
+			\item Gaming(MMO,FPS,strategy,Role Playing,action)
+			\item Exploring Computer languages and Webdesigner/Appdesigner websites
+		\end{enumerate}
 	
 		
 	\section*{\underline{\textbf{Personal Information}}}
