--- a/resume2.tex
+++ b/resume2.tex
@@ -6,7 +6,7 @@
 
 \begin{document}
 	
-	\title{Tanish garg}
+	\title{TANISH GARG}
 		\author{E-5, C.C.Colony, New Delhi-110007 \\ Contact: 09899525271,  E-mail: tanishgarg96@gmail.com}
 	\maketitle
 	
