--- a/resume.tex
+++ b/resume.tex
@@ -37,13 +37,14 @@
 	\section*{\underline{\textbf{Projects}}}
 		\begin{enumerate}
 			\item Innovation project: Fan Without Electricity
-			\item Innovation project: Problem based learning in Simulation environment 
+			\item Innovation project: Problem based learning in Simulation environment
+			\item Project at IIT Bombay: Robot Controlling Using ROS 
 		\end{enumerate}
 	
-%	\section*{\underline{\textbf{Training and Internship}}}
-%		\begin{itemize}
-%			\item none
-%		\end{itemize}
+	\section*{\underline{\textbf{Training and Internship}}}
+		\begin{itemize}
+			\item Summer Intern at IIT Bombay
+		\end{itemize}
 		
 	\section*{\underline{\textbf{Research Publication}}}
 		\begin{enumerate}
@@ -56,7 +57,8 @@
 			\begin{itemize}
 				\item C/EMBEDDED C		(proficient)
 				\item C++				(proficient)
-				\item MATLAB			(intermediate , image processing and computer vision)
+				\item MATLAB			(intermediate, image processing and computer vision)
+				\item Python			(intermediate)
 				\item JAVA				(intermediate)
 				\item MySQL				(intermediate)
 				\item XML				(intermediate)
@@ -70,6 +72,7 @@
 			\item AT90s2313
 			\item Intel 8086					
 		\end{itemize}
+		\item Robot Operating System(ROS-Indigo) (Intermediate)   
 		
 		\end{itemize}
 		
@@ -103,7 +106,6 @@
 	\section*{\underline{\textbf{Hobbies}}}
 		\begin{enumerate}
 			\item Reading novels(sci-fi,thriller,fantasy,mysteries)
-			\item Gaming(MMO,FPS,strategy,Role Playing,action)
 			\item Exploring Computer languages and Webdesigner/Appdesigner websites
 		\end{enumerate}
 	
